objects/revcult__Field_Interaction__c.object
<CustomObject>
    <fields>
        <fullName>revcult__Case_Sensitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Sensitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Deterministic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deterministic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__Durable_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Durable Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Errors__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>revcult__Initiated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Field_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>revcult__Initiated_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initiated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>revcult__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>revcult__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Encryption Request</fullName>
                </value>
                <value>
                    <fullName>Apex Parsing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Field Interaction</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Interaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>